--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.google.firebase:firebase-admin:6.8.1'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.0.4'
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
